fix alias field to not overflow on smaller screen sizes

--- a/cdap-ui/app/directives/widget-container/widget-function-dropdown-with-alias/widget-function-dropdown-with-alias.less
+++ b/cdap-ui/app/directives/widget-container/widget-function-dropdown-with-alias/widget-function-dropdown-with-alias.less
@@ -33,7 +33,7 @@ my-function-dropdown-with-alias {
           margin-right: 4px;
         }
         input.form-control {
-          width: 85%;
+          width: 83%;
           display: inline-block;
         }
       }
